Add footer to SPA, add InviteMode configuration (#1132)
